--- a/VRChat/97/1026097.html
+++ b/VRChat/97/1026097.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "eFp6kofIpkLgIwFKbBrDGGX+OJ2lrhXSQm2sZJpZKpo="></script>
+    "gwBm45BbUzpo8swfygj8q7scyHj8rFdhoo/s1Fi+ftw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GP-EX とてもいらない刀 MK2 ","description":"謎の素材で構成された刀\nテキトウに使ってね(色変え・改造OK)(配信・ゲームなどにしようもよし)\nでもそのままだったりただ改造しただけで売らないでね？\n12/18 ヴァアアアジョンツーにアップデートしました\nが、やってることはそこまで変わらずデザインとエミッション用のテクスチャがあるだけなのでご了承ください。\n\n\n2019/3/11　更に改良・追加した\n「GP-EX とてもいらない刀 MK2」\nMK2は有料版で500円で配布します\n無料配布版はver2が入ってます\nマテリアルはスタンダードシェーダーで入ってます\nマテリアルから自分好みの色にしてくれると嬉しいです。","url":"https://booth.pm/ja/items/1026097","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/434530f1-ffe2-4303-bcc0-8ff5f4bb9b0f/i/1026097/a845011d-2603-4ccc-831a-b1a7b87fbc4b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eFp6kofIpkLgIwFKbBrDGGX+OJ2lrhXSQm2sZJpZKpo="></script>
+    nonce="gwBm45BbUzpo8swfygj8q7scyHj8rFdhoo/s1Fi+ftw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               GP-EX とてもいらない刀 MK2
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -671,7 +670,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
